--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/jonathapriebe/ze-market#readme",
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^14.14.36",
@@ -43,6 +44,9 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@overnightjs/core": "^1.7.5",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "module-alias": "^2.2.2"
   }
 }
