--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "yarn build && node dist/src/index.js",
-    "start:dev": "ts-node-dev 'src/index.ts'",
+    "start:local": "ts-node-dev 'src/index.ts' | pino-pretty -c",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
@@ -31,16 +31,19 @@
   },
   "homepage": "https://github.com/jonathapriebe/ze-market#readme",
   "devDependencies": {
+    "@types/amqplib": "^0.5.17",
     "@types/config": "^0.0.38",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^14.14.36",
+    "@types/pino": "^6.3.6",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
     "jest": "^26.6.3",
+    "pino-pretty": "^4.7.1",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
@@ -49,10 +52,13 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.5",
+    "amqplib": "^0.7.1",
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
     "express": "^4.17.1",
+    "fast-csv": "^4.3.6",
     "module-alias": "^2.2.2",
-    "mongoose": "^5.12.2"
+    "mongoose": "^5.12.2",
+    "pino": "^6.11.2"
   }
 }
