prettier an lix fixes and tests finished

--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
     "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
-    "test:unit": "jest",
     "test:functional": "jest --projects ./test --runInBand"
   },
   "repository": {
@@ -34,6 +33,7 @@
     "@types/amqplib": "^0.5.17",
     "@types/config": "^0.0.38",
     "@types/express": "^4.17.11",
+    "@types/http-status-codes": "^1.2.0",
     "@types/jest": "^26.0.22",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^14.14.36",
@@ -57,6 +57,7 @@
     "config": "^3.3.6",
     "express": "^4.17.1",
     "fast-csv": "^4.3.6",
+    "http-status-codes": "^2.1.4",
     "module-alias": "^2.2.2",
     "mongoose": "^5.12.2",
     "pino": "^6.11.2"
