--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "yarn build && node dist/src/index.js",
-    "start:local": "ts-node-dev 'src/index.ts' | pino-pretty -c",
+    "start": "export NODE_APP_INSTANCE=1 && yarn build && node dist/src/index.js",
+    "start:local": "export NODE_APP_INSTANCE=1 && ts-node-dev 'src/index.ts' | pino-pretty -c",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
     "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
-    "test:functional": "jest --projects ./test --runInBand"
+    "test": "jest --projects ./test --runInBand"
   },
   "repository": {
     "type": "git",
@@ -33,12 +33,12 @@
     "@types/amqplib": "^0.5.17",
     "@types/config": "^0.0.38",
     "@types/express": "^4.17.11",
-    "@types/http-status-codes": "^1.2.0",
     "@types/jest": "^26.0.22",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^14.14.36",
     "@types/pino": "^6.3.6",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
@@ -55,11 +55,12 @@
     "amqplib": "^0.7.1",
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
+    "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "fast-csv": "^4.3.6",
-    "http-status-codes": "^2.1.4",
     "module-alias": "^2.2.2",
     "mongoose": "^5.12.2",
-    "pino": "^6.11.2"
+    "pino": "^6.11.2",
+    "swagger-ui-express": "^4.1.6"
   }
 }
